// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`putEcho should fail when crossing the red line ;) 1`] = `
Object {
  "errorCode": "E_MUST_NOT_BE_NAMED",
  "errorParams": Array [
    "Big up to Lord Voldemort!",
  ],
  "logCalls": Array [
    Array [
      "warning",
      "📢 - Echoing \\"Repeat this!\\"",
    ],
  ],
}
`;

exports[`putEcho should work 1`] = `
Object {
  "logCalls": Array [
    Array [
      "warning",
      "📢 - Echoing \\"Repeat this!\\"",
    ],
  ],
  "response": Object {
    "body": Object {
      "echo": "Repeat this!",
    },
    "status": 200,
  },
}
`;
